--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ replay_pid*
 .DS_Store
 *.target
 *.idea
+
+*.lst
+
+target/maven-archiver/
+
+target/israeljasma-1.0-SNAPSHOT/
+
+target/classes/cl/israeljasma/apiservlet/webapp/models/
